--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gatsby-plugin-sharp": "^2.0.17",
     "gatsby-plugin-sitemap": "^2.0.4",
     "gatsby-plugin-styled-components": "^3.0.4",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-plugin-webpack-size": "^0.0.3",
     "gatsby-source-filesystem": "^2.0.16",
     "gatsby-transformer-json": "^2.1.7",
@@ -61,6 +62,7 @@
     "lighthouse": "^4.0.0",
     "mkdirp": "^0.5.1",
     "node-gyp": "^3.8.0",
-    "prettier": "^1.16.0"
+    "prettier": "^1.16.0",
+    "webpack": "^4.29.0"
   }
 }
